# stsci.distutils

./: CHANGES.txt  README.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py
lib/stsci/distutils/: hooks.py
lib/stsci/distutils/command/: easier_install.py
stsci/distutils/: __init__.py  hooks.py  release.py  svnutils.py  versionutils.py
stsci/distutils/command/: build_optional_ext.py
stsci/distutils/tests/: __init__.py  test_commands.py  test_hooks.py  util.py
stsci/distutils/tests/testpackage/: README.txt
trunk/: CHANGES.txt  setup.py
trunk/stsci/distutils/: hooks.py
