[metadata]
name = stsci.distutils
version = 0.2
author = Erik M. Bray
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/pyraf/stsci_python
license = BSD
requires-python = >=2.5

# Require d2to1 since all stsci_python packages use it for installation
# anyways, so might as well make sure it gets installed.
requires-dist = d2to1==0.1.3

[files]
packages_root = lib
packages =
    stsci
    stsci.distutils
