[metadata]
name = stsci.distutils
version = 0.2dev
author = Erik M. Bray
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/pyraf/stsci_python
summary = distutils/packaging-related utilities used by STScI's packages
description-file = README.txt
license = BSD
requires-python = >=2.5

# Require d2to1 since all stsci_python packages use it for installation
# anyways, so might as well make sure it gets installed.
requires-dist =
    d2to1>=0.1.3
    distribute>=0.6

classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[files]
packages_root = lib
packages =
    stsci
    stsci.distutils
